src/objects/Deal_Support__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Burns, Brooke</fullName>
                </value>
                <value>
                    <fullName>Castleman Jr, Mike</fullName>
                </value>
                <value>
                    <fullName>Christian, Nolan</fullName>
                </value>
                <value>
                    <fullName>Inselmann, Jack</fullName>
                </value>
                <value>
                    <fullName>MacIntosh, David</fullName>
                </value>
                <value>
                    <fullName>Morrison, Toby</fullName>
                </value>
                <value>
                    <fullName>Rassel, Phillip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Brief description of what you need assistance with</description>
        <label>Notes</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Supports</relationshipLabel>
        <relationshipName>Deal_Supports</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Started</fullName>
                    <default>true</default>
                    <label>Not Yet Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deal Support</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Deal Support Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Supports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>